--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -24,7 +24,7 @@
         font-weight: 400;
         letter-spacing: 1px;
         color: #eee;
-        font-family: 'Dancing Script', cursive;;
+        font-family: 'Dancing Script', cursive;
 
         position: absolute;
         left: 50%;
