--- a/src/components/customer-reviews/customer-reviews.styles.scss
+++ b/src/components/customer-reviews/customer-reviews.styles.scss
@@ -1,3 +1,5 @@
+@import '../../sass-variables.scss';
+
 @font-face {
     font-family: 'TitleFont';
     src: url('YellowMagician.ttf') format('truetype');
@@ -13,6 +15,11 @@
 
     display: flex;
 
+    @media only screen and (max-width: $bp-medium-small) {
+        flex-direction: column;
+        margin-top: 3rem;
+    }
+
     &__left {
         width: 100%;
         display: flex;
@@ -24,6 +31,12 @@
             font-size: 5rem;
             color: #ffac22;
             font-family: 'TitleFont';
+
+            @media only screen and (max-width: $bp-medium-small) {
+                margin-top: 10rem;
+                margin-bottom: 4rem;
+                font-size: 3.8rem;
+            }
         }
     }
 
@@ -40,6 +53,10 @@
             font-size: 4rem;
             letter-spacing: 3px;
             color: #eee;
+
+            @media only screen and (max-width: $bp-medium-small) {
+                font-size: 2.6rem;
+            }
         }
     }
 
