--- a/src/components/home-gallery/home-gallery.styles.scss
+++ b/src/components/home-gallery/home-gallery.styles.scss
@@ -1,3 +1,5 @@
+@import '../../sass-variables.scss';
+
 .gallery {
     padding: 1.5rem;
     margin-bottom: 10rem;
@@ -5,6 +7,16 @@
     grid-template-rows: repeat(3, [row-start] 12vw [row-end]);
     grid-template-columns: repeat(4, [col-start] 1fr [col-end]);
     grid-gap: 1.5rem;
+
+    @media only screen and (max-width: $bp-medium-large) {
+        grid-template-rows: repeat(4, [row-start] 18vw [row-end]);
+        grid-template-columns: repeat(3, [col-start] 1fr [col-end]);
+    }
+
+    @media only screen and (max-width: $bp-medium-medium) {
+        grid-template-rows: repeat(6, [row-start] 24vw [row-end]);
+        grid-template-columns: repeat(2, [col-start] 1fr [col-end]);
+    }
 
     &__img {
 		width: 100%;
