--- a/src/components/main/main.styles.scss
+++ b/src/components/main/main.styles.scss
@@ -1,3 +1,5 @@
+@import '../../sass-variables.scss';
+
 @font-face {
     font-family: 'TitleFont';
     src: url('YellowMagician.ttf') format('truetype');
@@ -47,10 +49,20 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
+        
+        @media only screen and (max-width: $bp-medium-medium) {
+            flex-direction: column-reverse;
+
+        }
 
         &--logo {
             width: 50rem;
             margin-right: 9rem;
+
+            @media only screen and (max-width: $bp-medium-medium) {
+                margin-right: 0;
+                width: 25rem;
+            }
         }
 
         &--options {
@@ -62,6 +74,14 @@
             align-items: flex-start;
             color: #ecf0f1;
             font-family: 'Lato', sans-serif;
+
+            @media only screen and (max-width: $bp-medium) {
+                width: 100%;
+            }
+
+            @media only screen and (max-width: $bp-medium-medium) {
+                margin-top: 3rem;
+            }
         }
     }
 
@@ -76,12 +96,29 @@
         text-align: left;
         padding-left: 8rem;
 
+        @media only screen and (max-width: $bp-largest) {
+            margin-top: 5rem;
+        }
+
+        @media only screen and (max-width: $bp-medium-medium) {
+            text-align: center;
+            padding-left: 0;
+        }
+
         &--title {
             margin-top: -6rem;
             font-size: 8rem;
             color: #ffac22;
             font-family: 'TitleFont';
             font-weight: 700;
+
+            @media only screen and (max-width: $bp-medium) {
+                font-size: 6rem;
+            }
+
+            @media only screen and (max-width: $bp-small-smallest) {
+                font-size: 4.5rem;
+            }
         }
 
         &--tagline {
@@ -91,11 +128,41 @@
             letter-spacing: 2px;
             font-size: 3rem;
             font-weight: 300;
+
+            @media only screen and (max-width: $bp-medium) {
+                font-size: 2.8rem;
+                letter-spacing: .8px;
+                margin-bottom: 4rem;
+            }
+
+            @media only screen and (max-width: $bp-small-smallest) {
+                font-size: 2rem;
+            }
+        }
+
+        &--links {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            @media only screen and (max-width: $bp-medium-medium) {
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                margin-top: 2rem;
+            }
+        }
+
+        &--btn {
+            width: 30rem;
+            @media only screen and (max-width: $bp-medium-medium) {
+                margin-bottom: 2rem;
+            }
         }
     }
 
     &__seenon--text {
-        margin-top: 12rem;
+        margin-top: 8rem;
         padding: 0 20rem;
         color: #b1c2c6;
         font-family: 'Lato', sans-serif;
@@ -103,7 +170,15 @@
 		grid-template-columns: 1fr max-content 1fr;
 		grid-column-gap: 1.5rem;
 		align-items: center;
-		font-size: 1.6rem;
+        font-size: 1.6rem;
+        
+        @media only screen and (max-width: $bp-largest) {
+            margin-top: 16rem;
+        }
+
+        @media only screen and (max-width: $bp-medium-small) {
+            padding: 0 10rem;
+        }
 
 		&::after,
 		&::before {
@@ -118,11 +193,20 @@
         padding: 0 15rem;
         display: flex;
         justify-content: space-around;
+
+        @media only screen and (max-width: $bp-small) {
+            padding: 0 10rem;
+        }
     }
 
     &__logo-img {
         margin-top: -3rem;
         width: 15rem;
+
+        @media only screen and (max-width: $bp-medium) {
+            width: 10rem;
+            margin-top: 0;
+        }
     }
 }
 
