--- a/src/components/top-realtors/top-realtors.styles.scss
+++ b/src/components/top-realtors/top-realtors.styles.scss
@@ -1,3 +1,5 @@
+@import '../../sass-variables.scss';
+
 @font-face {
     font-family: 'TitleFont';
     src: url('YellowMagician.ttf') format('truetype');
@@ -11,6 +13,10 @@
 
     display: flex;
 
+    @media only screen and (max-width: $bp-medium-small) {
+        flex-direction: column;
+    }
+
     &__left {
         width: 100%;
         display: flex;
@@ -22,6 +28,12 @@
             font-size: 5rem;
             color: #ffac22;
             font-family: 'TitleFont';
+
+            @media only screen and (max-width: $bp-medium-small) {
+                margin-top: 10rem;
+                margin-bottom: 4rem;
+                font-size: 3.8rem;
+            }
         }
     }
 
@@ -32,6 +44,13 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
+
+        @media only screen and (max-width: $bp-medium-small) {
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+            margin-top: 3rem;
+        }
     }
 
     &__realtor {
