--- a/src/pages/signin-and-signup-page/signin-and-signup-page.styles.scss
+++ b/src/pages/signin-and-signup-page/signin-and-signup-page.styles.scss
@@ -1,7 +1,13 @@
+@import '../../sass-variables.scss';
+
 .signin-and-signup {
     height: 95vh;
     background-image: linear-gradient(90deg, rgba(#1d1850, .95) 0%, rgba(#1d1850, .95) 12% , rgba(#0f0c29, .95) 30%, rgba(#0f0c29, .95) 70%, rgba(#1d1850, .95) 85%), url('https://i.ibb.co/gMPZYyC/tampa-545308-1280.jpg');
     background-size: cover;
     background-position: top;
     position: relative;
+
+    @media only screen and (max-width: $bp-medium-large) {
+        height: 100vh;
+    }
 }
