--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -20,6 +20,10 @@
         width: 90%;
     }
 
+    @media only screen and (max-width: $bp-small-smallest) {
+        width: 96%;
+    }
+
 
     &__logo {
         height: 30%;
