--- a/src/sass-variables.scss
+++ b/src/sass-variables.scss
@@ -4,6 +4,7 @@ $bp-medium-large: 56.25em; //900px
 $bp-medium: 50em;   //800px
 $bp-medium-medium: 46.875em; //750px
 $bp-medium-small: 43.75em; //700px
+$bp-small-medium: 41.25em; //660px
 $bp-small: 37.5em;  //600px
 $bp-small-small: 34.375em; //550px
 $bp-small-smallest: 28.125em; //450px
