--- a/src/components/house-card/house-card.styles.scss
+++ b/src/components/house-card/house-card.styles.scss
@@ -45,6 +45,7 @@
 
             @media only screen and (max-width: $bp-small-small) {
                 padding: 0;
+                font-size: 3rem;
             }
         }
 
