--- a/src/components/house-list-container/house-list-container.styles.scss
+++ b/src/components/house-list-container/house-list-container.styles.scss
@@ -1,3 +1,5 @@
+@import '../../sass-variables.scss';
+
 @font-face {
     font-family: 'TitleFont';
     src: url('YellowMagician.ttf') format('truetype');
@@ -10,7 +12,11 @@
         font-weight: 400;
         font-size: 5rem;
         color: #ffb944;
-        padding: 1.5rem 0 1rem 0;
+        padding: 6rem 0 0 0;
         text-decoration: underline;
+
+        @media only screen and (max-width: $bp-small-small) {
+            font-size: 4rem;
+        }
     }
 }
