--- a/src/components/realtor-card/realtor-card.styles.scss
+++ b/src/components/realtor-card/realtor-card.styles.scss
@@ -1,10 +1,16 @@
+@import '../../sass-variables.scss';
+
 .realtor-card {
-    background-color: #0f0c29;
+    background-color: #271f6b;
     padding: 4rem 2rem 0 2rem;
     position: relative;
     height: 50rem;
     border-radius: .5rem;
     box-shadow: 0 2rem 2rem rgba(0,0,0,.5);
+
+    @media only screen and (max-width: $bp-largest) {
+        height: 55rem;
+    }
 
     &__img {
         outline: 3px solid #ffb944;
@@ -25,6 +31,11 @@
         top: 11.5rem;
         left: 50%;
         transform: translate(-50%, 0);
+
+        @media only screen and (max-width: $bp-largest) {
+            top: 13rem;
+            height: 76.1%;
+        }
 
         &--name {
             font-family: 'Lato', sans-serif;
