--- a/src/pages/realtors-page/realtors-page.styles.scss
+++ b/src/pages/realtors-page/realtors-page.styles.scss
@@ -5,7 +5,7 @@
 
 .realtors-page {
     
-    background-image: linear-gradient(to right bottom, #c3bfec 40%, #928bdc 50%);
+    background-image: linear-gradient(to right bottom, #271f6b, #0f0c29);
 
     &__realtors {
         display: grid;
@@ -16,7 +16,7 @@
     }
 
     &__heading {
-        color: #271f6b;
+        color: #ffb944;
         padding: 10rem 6rem 6rem 0;
         text-decoration: underline;
         font-family: 'TitleFont';
