Fixed a problem in the sign in page

--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -26,7 +26,7 @@
 
 
     &__logo {
-        height: 30%;
+        height: 20rem;
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
